Cabal-version:  2.2
Name:           onest
Version:        0.0.0
Synopsis:       A Monad with Read-After-Write Protection
License:        BSD-3-Clause
Author:         Simon Lovell Bart
Maintainer:     exclusiveandgate@gmail.com
Build-type:     Simple

common common-options
    default-language: Haskell2010

    default-extensions:
        FlexibleInstances
        GADTs
        ImportQualifiedPost
        LambdaCase
        NoStarIsType
        QualifiedDo
        TupleSections

library
    import: common-options
    hs-source-dirs: src

    exposed-modules:
        OneST
        MVector

    ghc-options: -Wall -Wcompat
    CPP-Options: -DCABAL

    other-extensions:
        NoImplicitPrelude
        RankNTypes
        UndecidableInstances

    build-depends:
        base            >= 4.11     && < 5,
        primitive       >= 0.7.0.0
